# ms_simple_py

./: .env-dev  .envrc  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.dev.yml  docker-compose.test.yml  docker-compose.yml  pyproject.toml
docs/: api.md  asyncio.md  background-tasks.md  logging.md  migrations.md  orm.md  readme.md  repository.md  schemas.md  services.md  testing.md
src/: app.py  constants.py  main.py  settings.py
src/common/: decorators.py
src/common/helpers/: __init__.py  date_helper.py  exception_helper.py  response_helper.py
src/domain/bank_billet/: bank_billet_proccess.py
src/domain/bank_billet/use_cases/: build_payload_for_create_billet.py
src/domain/eventing/: service.py
src/domain/installment/uses_cases/: installment_creation.py
src/entrypoints/: __init__.py
src/entrypoints/routes/: __init__.py  health_check.py  start.py
src/entrypoints/routes/v1/: __init__.py
src/infra/adapters/acl/: acl_create_billet.py
src/infra/adapters/database/migration/: env.py
src/infra/adapters/database/orm/: __init__.py  settings.py
src/infra/adapters/database/orm/models/: bank_billet_creation_batch.py  bank_billet_creation_batch_item.py  base.py  entity_model_base.py  financial_installment.py  financing.py  payment.py
src/infra/adapters/logging/: settings.py
src/infra/adapters/repositories/: __init__.py  abstract_repository.py  bank_billet_creation_batch.py  bank_billet_creation_batch_item.py  exceptions.py  financial_installment.py  sqlalchemy_repository.py
src/jobs/: job_get_prefixed_installments.py
src/schemas/: schema_base.py
src/services/: exceptions.py  financial_installment.py  service_base.py
tests/: __init__.py  conftest.py
tests/e2e/entrypoints/routes/: test_health_check.py
tests/unit/: test_settings.py
tests/unit/common/: test_exception_helper.py
tests/unit/common/helpers/: test_date_helper.py  test_decorators.py
